# 361C-term-project

./: .gitmodules  CMakeLists.txt  ECE361C_Final_Project.ipynb  README.md  termproj  termproj.sln
src/: GPU_FFT_Solver2d.cpp  GPU_FFT_Solver2d.cu  GPU_FFT_Solver2d.h  Seq_FFT_Solver2d.cpp  Seq_FFT_Solver2d.h  main.cpp
